--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "engines": {
     "node": "*"
   },
+  "devDependencies": {
+    "underscore": "~1.3.0"
+  },
+  "scripts": { "test": "node test/async.js && node test/sync.js" },
   "licenses" : [ { 
     "type" : "MIT",
       "url" : "http://github.com/dtrejo/gss/raw/master/LICENSE"
